# sirius

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
config/: default.toml  development.toml  development.toml.example  production.toml
crates/sirius-actor/: Cargo.toml
crates/sirius-actor/src/: actor.rs  context.rs  handle.rs  lib.rs  mailbox.rs
crates/sirius-codec/: Cargo.toml
crates/sirius-codec/src/: decoder.rs  encoder.rs  header.rs  lib.rs  packet.rs
crates/sirius-config/: Cargo.toml
crates/sirius-config/src/: database.rs  error.rs  lib.rs  network.rs  server.rs  tracing.rs
crates/sirius-currency/: Cargo.toml
crates/sirius-currency/src/: error.rs  lib.rs  service.rs
crates/sirius-database/: Cargo.toml
crates/sirius-database/src/: health.rs  lib.rs  pool.rs
crates/sirius-error/: Cargo.toml
crates/sirius-error/src/: actor.rs  auth.rs  database.rs  lib.rs  network.rs  protocol.rs
crates/sirius-handler/: Cargo.toml
crates/sirius-handler/src/: context.rs  lib.rs  prelude.rs  registry.rs  router.rs  traits.rs
crates/sirius-handler/src/handlers/: mod.rs
crates/sirius-handler/src/handlers/navigator/: init.rs  mod.rs  search.rs
crates/sirius-handler/src/handlers/user/: currency.rs  info_retrieve.rs  mod.rs  save_look.rs
crates/sirius-handshake/: Cargo.toml
crates/sirius-handshake/src/: lib.rs
crates/sirius-navigator/: Cargo.toml
crates/sirius-navigator/src/: lib.rs  models.rs  service.rs
crates/sirius-network/: Cargo.toml
crates/sirius-network/src/: connection.rs  lib.rs  limiter.rs  listener.rs  manager.rs
crates/sirius-packets/: Cargo.toml
crates/sirius-packets/src/: lib.rs  prelude.rs  reader.rs  writer.rs
crates/sirius-packets/src/incoming/: handshake.rs  mod.rs
crates/sirius-packets/src/incoming/handshake/: client_hello.rs  info_retrieve.rs  mod.rs  ping_pong.rs  release_version.rs  sso_ticket.rs
crates/sirius-packets/src/incoming/navigator/: init.rs  mod.rs  search.rs
crates/sirius-packets/src/incoming/user/: currency.rs  info_retrieve.rs  mod.rs  save_look.rs
crates/sirius-packets/src/outgoing/: handshake.rs  mod.rs
crates/sirius-packets/src/outgoing/availability/: closed_and_opens.rs  closes_and_opens_at.rs  maintenance.rs  mod.rs  status.rs  time.rs  will_close_in_minutes.rs
crates/sirius-packets/src/outgoing/handshake/: auth_ok.rs  authenticated.rs  mod.rs  ping_pong.rs  user_info.rs
crates/sirius-packets/src/outgoing/navigator/: collapsed_categories.rs  event_categories.rs  lifted_rooms.rs  meta_data.rs  mod.rs  saved_searches.rs  search_results.rs  settings.rs
crates/sirius-packets/src/outgoing/user/: credits.rs  currency.rs  mod.rs  permissions.rs  settings.rs  update_look.rs
crates/sirius-permissions/: Cargo.toml
crates/sirius-permissions/src/: lib.rs  manager.rs  permission.rs  rank.rs  setting.rs  table.rs
crates/sirius-repository/: Cargo.toml
crates/sirius-repository/src/: lib.rs
crates/sirius-repository/src/models/: mod.rs  navigator.rs  room.rs  user.rs
crates/sirius-repository/src/repositories/: mod.rs  room_repo.rs  user_repo.rs
crates/sirius-server/: Cargo.toml
crates/sirius-server/src/: banner.rs  context.rs  main.rs
crates/sirius-session/: Cargo.toml
crates/sirius-session/src/: command.rs  lib.rs  manager.rs  session.rs  state.rs
crates/sirius-tracing/: Cargo.toml
crates/sirius-tracing/src/: error.rs  lib.rs  subscriber.rs
crates/sirius-types/: Cargo.toml
crates/sirius-types/src/: coords.rs  currency.rs  enums.rs  ids.rs  lib.rs  room.rs
crates/sirius-user/: Cargo.toml
crates/sirius-user/src/: command.rs  lib.rs  user.rs
crates/sirius-websocket/: Cargo.toml
crates/sirius-websocket/src/: lib.rs  stream.rs  upgrade.rs
migrations/: 20260508152930_create_users_table.sql
seeds/: dev_user.sql
