[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["sync", "rt", "net", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "json",
    "fmt",
] }
tokio-util = { version = "0.7.18", features = ["codec"] }
