[package]
name = "sirius-database"
version = "0.1.0"
edition = "2024"

[dependencies]
sirius-error = { path = "../sirius-error" }
sirius-config = { path = "../sirius-config" }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
