[package]
name = "sirius-database"
version.workspace = true
edition.workspace = true

[dependencies]
sirius-error.workspace = true
sirius-config.workspace = true
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
