[package]
name = "sirius-network"
version = "0.1.0"
edition = "2024"

[dependencies]
sirius-error = { path = "../sirius-error" }
sirius-types = { path = "../sirius-types" }
sirius-config = { path = "../sirius-config" }
sirius-codec = { path = "../sirius-codec" }
sirius-actor = { path = "../sirius-actor" }
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
dashmap = "6.1.0"
futures-util = { version = "0.3.32", features = ["sink"] }
