[package]
name = "sirius-network"
version.workspace = true
edition.workspace = true

[dependencies]
sirius-error.workspace = true
sirius-types.workspace = true
sirius-config.workspace = true
sirius-codec.workspace = true
sirius-actor.workspace = true
sirius-websocket.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
dashmap.workspace = true
futures-util = { version = "0.3.32", features = ["sink"] }
