[package]
name = "sirius-server"
version = "0.1.0"
edition = "2024"

[dependencies]
sirius-config = { path = "../sirius-config" }
sirius-tracing = { path = "../sirius-tracing" }
sirius-network = { path = "../sirius-network" }
sirius-session = { path = "../sirius-session" }
sirius-database = { path = "../sirius-database" }
tokio.workspace = true
tracing.workspace = true
rand = "0.10.1"
