[package]
name = "sirius-server"
version.workspace = true
edition.workspace = true

[dependencies]
sirius-config.workspace = true
sirius-tracing.workspace = true
sirius-network.workspace = true
sirius-session.workspace = true
sirius-database.workspace = true
tokio.workspace = true
tracing.workspace = true
rand = "0.10.1"
