[package]
name = "sirius-server"
version.workspace = true
edition.workspace = true

[dependencies]
sirius-permissions.workspace = true
sirius-config.workspace = true
sirius-tracing.workspace = true
sirius-network.workspace = true
sirius-session.workspace = true
sirius-repository.workspace = true
sirius-navigator.workspace = true
sirius-database.workspace = true
sirius-handler.workspace = true
tokio.workspace = true
tracing.workspace = true
rand = "0.10.1"
dotenvy = "0.15.7"
