[package]
name = "sirius-session"
version.workspace = true
edition.workspace = true

[dependencies]
sirius-error.workspace = true
sirius-types.workspace = true
sirius-actor.workspace = true
sirius-codec.workspace = true
sirius-repository.workspace = true
sirius-packets.workspace = true
sirius-user.workspace = true
sirius-handshake.workspace = true
sirius-network.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = "1.23.1"
dashmap.workspace = true
