[package]
name = "sirius-user"
version.workspace = true
edition.workspace = true

[dependencies]
sirius-error.workspace = true
sirius-packets.workspace = true
sirius-actor.workspace = true
sirius-currency.workspace = true
sirius-types.workspace = true
sirius-database.workspace = true
sirius-repository.workspace = true
sirius-codec.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
