[package]
name = "sirius-websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
sirius-error = { path = "../sirius-error" }
sirius-codec = { path = "../sirius-codec" }
sirius-config = { path = "../sirius-config" }
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
tokio-tungstenite = "0.26.1"
futures-util = { version = "0.3.32", features = ["sink"] }
http = "1.2.0"
