[package]
name = "sirius-websocket"
version.workspace = true
edition.workspace = true

[dependencies]
sirius-error.workspace = true
sirius-codec.workspace = true
sirius-config.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
tracing.workspace = true
tokio-tungstenite = "0.29.0"
futures-util = { version = "0.3.32", features = ["sink"] }
http = "1.4.0"
